<resources>
    <string name="app_name">EnigmaSimulator</string>
    <string name="rotor_auswahl_1">Rotor a 1</string>
    <string name="rotor_auswahl_2">Rotor a 2</string>
    <string name="rotor_auswahl_3">Rotor a 3</string>
    <string name="reklektor_auswahl">Reflektor</string>
    <string name="rotor_1">Rotor 1</string>
    <string name="rotor_2">Rotor 2</string>
    <string name="rotor_3">Rotor 3</string>
    <string name="counter_1">counter 1</string>
    <string name="counter_2">counter 2</string>
    <string name="counter_3">counter 3</string>
    <string name="ausgabe_anfangs_text">Code Ausgabe</string>
    <string name="umwandeln">Umwandeln</string>
</resources>
