<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.masterprogrammer.enigmasimulator.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:orientation="horizontal"
        android:background="@drawable/top_buttons"
        >
        <Button
            android:id="@+id/b_rotor3_auswahl"
            android:text="@string/rotor_auswahl_3"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginLeft="72px"
            android:layout_marginTop="50px"
            android:textSize="60px"
            android:gravity="center"
            android:background="@android:color/transparent"

            />
        <Button
            android:id="@+id/b_rotor2_auswahl"
            android:text="@string/rotor_auswahl_2"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginLeft="240px"
            android:layout_marginTop="50px"
            android:textSize="60px"
            android:gravity="center"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/b_rotor1_auswahl"
            android:text="@string/rotor_auswahl_1"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginLeft="250px"
            android:layout_marginTop="50px"
            android:textSize="60px"
            android:gravity="center"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="650px"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:background="@drawable/kabelsalat">
        <LinearLayout
            android:layout_width="300px"
            android:layout_height="match_parent"
            android:background="@drawable/side_button">
            <Button
                android:id="@+id/b_reflektor"
                android:layout_width="170px"
                android:layout_height="220px"
                android:text="@string/reklektor_auswahl"
                android:background="@android:color/transparent"
                android:layout_marginTop="190px"
                android:layout_marginLeft="60px"
                android:textSize="40px"
                android:gravity="center"
                />
        </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600px"
            android:orientation="vertical"
            android:paddingTop="10dp"
                android:background="@drawable/mainboard"
            >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300px"
                    android:orientation="horizontal"
                    android:paddingLeft="50px"
                    android:paddingTop="5px"
                    >
                    <TextView
                        android:id="@+id/tv_rotor_text_anzeige3"
                        android:layout_width="160px"
                        android:layout_height="160px"
                        android:text="@string/rotor_3"
                        android:textSize="80px"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/tv_rotor_text_anzeige2"
                        android:layout_width="160px"
                        android:layout_height="160px"
                        android:text="@string/rotor_2"
                        android:layout_marginLeft="120px"
                        android:textSize="80px"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/tv_rotor_text_anzeige1"
                        android:layout_width="160px"
                        android:layout_height="160px"
                        android:text="@string/rotor_1"
                        android:layout_marginLeft="120px"
                        android:textSize="80px"
                        android:gravity="center"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:layout_marginTop="98px"
                    >
                    <Button
                        android:id="@+id/b_rotor_counter3"
                        android:layout_width="150px"
                        android:layout_height="150px"

                        android:background="@android:color/transparent"
                        android:layout_marginLeft="55px"
                        />
                    <Button
                        android:id="@+id/b_rotor_counter2"
                        android:layout_width="150px"
                        android:layout_height="150px"

                        android:background="@android:color/transparent"
                        android:layout_marginLeft="115px"
                        />
                    <Button
                        android:id="@+id/b_rotor_counter1"
                        android:layout_width="150px"
                        android:layout_height="150px"

                        android:background="@android:color/transparent"
                        android:layout_marginLeft="115px"
                        />
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">


        <TextView
            android:id="@+id/tv_code_ausgabe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ausgabe_anfangs_text" />

        <EditText
            android:id="@+id/et_code_eingabe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/b_umwandeln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umwandeln" />
    </LinearLayout>


</LinearLayout>
